@@ -16,11 +16,16 @@ guarantees a valid address at all times.
 
 [call [cmd ::ipentry::ipentry] [arg pathName] [opt "[arg option] [arg value]..."]]
 
-Creates a new ipentry widget and configures it with the given options and
+Creates a new IPv4 ipentry widget and configures it with the given options and
 their values. If themed Tk is available (Tk 8.5 or above) then the widget
 will use the same appearance as a ttk::entry unless the [arg -themed] option
 is provided and set to false. This option can only be used during widget
 creation.
+
+[call [cmd ::ipentry::ipentry6] [arg pathName] [opt "[arg option] [arg value]..."]]
+
+Creates a new ipentry widget for the entry of an IPv6 address. All options
+are the same as the IPv4 widget.
 
 [list_end]
 
@@ -32,22 +37,30 @@ Each widget created with the command above supports the following methods:
 [call [arg pathName] [method complete]]
 
 Returns a boolean value. True indicates that the entry contains a
-complete IP address, meaning all 4 fields have a value.
+complete IP address, meaning all fields have a value. In some cases
+IPv6 address are valid when fields are missing. You will need to do your
+own validation to detect this.
 
 [call [arg pathName] [method get]]
 
-Returns the contents of the entry as a list consisting of 4 elements.
+Returns the contents of the entry as a list consisting of 4 or 8 elements.
 
 [call [arg pathName] [method insert] [arg iplist]]
 
+IPv4
 Takes a list of 4 elements and inserts one into each quad of the entry, in order.
-All values in the list must be integers. Values outside the range 0 to 255
+All values in the list must be empty or integers. Values outside the range 0 to 255
 are modified to be within the range.
+
+IPv6
+Takes a list of 8 elements and inserts one into each quad of the entry, in order.
+All values in the list must be empty or 1 to 4 hex digits.
 
 [call [arg pathName] [method icursor] [arg index]]
 
 Sets the position of the widgets insertion cursor. Only integer values between
-0 and 15 are valid. Setting the icursor will only have an effect if the widget
+0 and 15 are valid for ipentry and 0 to 31 for ipentry6.
+Setting the icursor will only have an effect if the widget
 already has the input focus.
 
 [call [arg pathName] [method configure] [arg option] [arg value]...]
@@ -70,7 +83,11 @@ options section.
 
 [tkoption_def -textvariable textvariable Variable]
 
-The name of a variable which holds the value of the IP address.  The value must be a string of the form NNN.NNN.NNN.NNN or it will be modified to represent a valid IP address.
+The name of a variable which holds the value of the IP address.
+The value must be a string of the form NNN.NNN.NNN.NNN for IPv4 or
+HHHH:HHHH:HHHH:HHHH:HHHH:HHHH:HHHH:HHHH for IPv6 where H is a hex digit.
+The variable will be modified to represent a valid IP address if it is not
+already.
 
 [tkoption_def -state state State]
 
