@@ -8,13 +8,13 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: ipentry.tcl,v 1.15 2008/11/29 05:25:45 afaupell Exp $
+# RCS: @(#) $Id: ipentry.tcl,v 1.16 2008/11/29 17:57:51 afaupell Exp $
 
 package require Tk
 package provide ipentry 0.3
 
 namespace eval ::ipentry {
-    namespace export ipentry
+    namespace export ipentry ipentry6
     # copy all the bindings from Entry class to our own IPEntrybindtag class
     foreach x [bind Entry] {
         bind IPEntrybindtag $x [bind Entry $x]
@@ -30,6 +30,15 @@ namespace eval ::ipentry {
     bind IPEntrybindtag <<Paste>>          {::ipentry::Paste %W CLIPBOARD}
     bind IPEntrybindtag <<PasteSelection>> {::ipentry::Paste %W PRIMARY}
     bind IPEntrybindtag <Key-Tab>          {::ipentry::tab %W; break}
+    
+    # copy all the bindings from IPEntrybindtag
+    foreach x [bind IPEntrybindtag] {
+        bind IPEntrybindtag6 $x [bind IPEntrybindtag $x]
+    }
+    # and replace certain keys with ip6 bindings
+    bind IPEntrybindtag6 <KeyPress>         {::ipentry::keypress %W %K 6}
+    bind IPEntrybindtag6 <colon>            {::ipentry::dot %W}
+    bind IPEntrybindtag6 <period>           {}
 
     if {[package vsatisfies [package provide Tk] 8.5]} {
          ttk::style layout IPEntryFrame {
@@ -99,19 +108,77 @@ proc ::ipentry::ipentry {w args} {
     return $w
 }
 
+# ipentry --
+#
+# main entry point - construct a new ipentry6 widget
+#
+# ARGS:
+#       w       path name of widget to create
+#
+#               see ::ipentry::configure for args
+#
+# RETURNS:
+#       the widget path name
+#
+proc ::ipentry::ipentry6 {w args} {
+    upvar #0 [namespace current]::widget_$w state
+    set state(themed) [package vsatisfies [package provide Tk] 8.5]
+    foreach {name val} $args {
+        if {$name eq "-themed"} {
+            set state(themed) $val
+        }
+    }
+    if {$state(themed)} {
+        ttk::frame $w -style IPEntryFrame -class IPEntry
+    } else {
+        frame $w -relief sunken -class IPEntry ;#-padx 5
+    }
+    foreach x {0 1 2 3 4 5 6 7} y {d1 d2 d3 d4 d5 d6 d7 d8} {
+        entry $w.$x -borderwidth 0 -width 4 -highlightthickness 0 \
+            -justify center
+        label $w.$y -borderwidth 0 -font [$w.$x cget -font] -width 1 -text : \
+            -justify center -cursor [$w.$x cget -cursor] \
+            -background [$w.$x cget -background] \
+            -disabledforeground [$w.$x cget -disabledforeground]
+        pack $w.$x $w.$y -side left
+        bindtags $w.$x [list $w.$x IPEntrybindtag6 . all]
+        bind $w.$y <Button-1> {::ipentry::dotclick %W %x}
+    }
+    destroy $w.d8
+    if {$state(themed)} {
+        pack configure $w.0 -padx {1 0} -pady 1
+        pack configure $w.7 -padx {0 1} -pady 1 -fill x -expand 1
+        $w.7 configure -justify left
+    } else {
+        $w configure -borderwidth [lindex [$w.0 configure -bd] 3]
+            #-background [$w.0 cget -bg]
+    }
+    rename ::$w ::ipentry::_$w
+    # redirect the widget name command to the widgetCommand dispatcher
+    interp alias {} ::$w {} ::ipentry::widgetCommand6 $w
+    bind $w <Destroy> [list ::ipentry::destroyWidget $w]
+    #bind $w <FocusIn> [list focus $w.0]
+    if {[llength $args] > 0} {
+        eval [list $w configure] $args
+    }
+    return $w
+}
+
 # keypress --
 #
 # called every time a key is pressed in an ipentry widget
+# used by both ipentry and ipentry6
 #
 # ARGS:
 #       w       window argument (%W) from the event binding
 #       key     the keysym (%K) from the event
+#       type    empty string or "6" depending on the type of ipentry
 #
 # RETURNS:
 #       nothing
 #
-proc ::ipentry::keypress {w key} {
-    if {![validate $w $key]} { return }
+proc ::ipentry::keypress {w key {type {}}} {
+    if {![validate$type $w $key]} { return }
     # sel.first and sel.last throw an error if the selection isnt in $w
     catch {
         set insert [$w index insert]
@@ -128,6 +195,9 @@ proc ::ipentry::keypress {w key} {
 # tab --
 #
 # called when the Tab key is pressed in an ipentry widget
+# used by both ipentry and ipentry6
+#
+# make the focus jump to the next widget instead of an ipentry sub-widget
 #
 # ARGS:
 #       w       window argument (%W) from the event binding
@@ -138,12 +208,13 @@ proc ::ipentry::keypress {w key} {
 proc ::ipentry::tab {w} {
     # redirect to the standard tk handler but use the parent frame instead
     # of the entry widget
-    tk::TabToWindow [tk_focusNext [winfo parent $w].3]
+    tk::TabToWindow [tk_focusNext [lindex [winfo children [winfo parent $w]] end]]
 }
 
 # backspace --
 #
 # called when the Backspace key is pressed in an ipentry widget
+# used by both ipentry and ipentry6
 #
 # try to act like a normal backspace except if the cursor is at index 0
 # of one entry we need to move to the end of the preceding entry
@@ -161,8 +232,7 @@ proc ::ipentry::backspace {w} {
         if {[$w index insert] == 0} {
             set w [skip $w prev]
         }
-            $w delete [expr {[$w index insert] - 1}]
-        
+        $w delete [expr {[$w index insert] - 1}]
     }
     ::ipentry::updateTextvar $w
 }
@@ -170,8 +240,9 @@ proc ::ipentry::backspace {w} {
 # dot --
 #
 # called when the dot (Period) key is pressed in an ipentry widget
+# used by both ipentry and ipentry6
 #
-# treat the current entry as done and move to the next entry widget
+# treat the current entry as done and move to the next entry field
 #
 # ARGS:
 #       w       window argument (%W) from the event binding
@@ -189,6 +260,7 @@ proc ::ipentry::dot {w} {
 # FocusIn --
 #
 # called when the focus enters any of the child widgets of an ipentry
+# used by both ipentry and ipentry6
 #
 # clear the selection of all child widgets other than the one with focus
 #
@@ -200,7 +272,8 @@ proc ::ipentry::dot {w} {
 #
 proc ::ipentry::FocusIn {w} {
     set p [winfo parent $w]
-    foreach x {0 1 2 3} {
+    foreach x {0 1 2 3 4 5 6 7} {
+        if {![winfo exists $p.$x]} { break }
         if {"$p.$x" != $w} {
             $p.$x selection clear
         }
@@ -210,6 +283,7 @@ proc ::ipentry::FocusIn {w} {
 # FocusOut --
 #
 # called when the focus leaves any of the child widgets of an ipentry
+# used by both ipentry and ipentry6
 #
 # dont allow a 0 in the first quad
 #
@@ -226,11 +300,21 @@ proc ::ipentry::FocusOut {w} {
         $w insert end 1
         ::ipentry::updateTextvar $w
     }
+    # trim off leading zeros
+    if {[string length $s] > 1} {
+        set n [string trimleft $s 0]
+        if {$n eq ""} { set n 0 }
+        if {![string equal $n $s]} {
+            $w delete 0 end
+            $w insert end $n
+        }
+    }
 }
 
 # Paste --
 #
 # called from the <<Paste>> virtual event
+# used by ipentry only
 #
 # clear the selection of all child widgets other than the one with focus
 #
@@ -268,9 +352,46 @@ proc ::ipentry::Paste {w sel} {
     ::ipentry::updateTextvar $w
 }
 
+# Paste6 --
+#
+# called from the <<Paste>> virtual event
+# used by both ipentry6 only
+#
+# clear the selection of all child widgets other than the one with focus
+#
+# ARGS:
+#       w       window argument (%W) from the event binding
+#       sel     one of CLIPBOARD or PRIMARY
+#
+# RETURNS:
+#       nothing
+#
+proc ::ipentry::Paste6 {w sel} {
+    if {[catch {::tk::GetSelection $w $sel} paste]} { return }
+    $w delete 0 end
+    foreach char [split $paste {}] {
+        # ignore everything except colons and hex digits
+        if {![string match {[0123456789abcdefABCDEF:]} $char]} { continue }
+        if {$char != ":"} {
+            $w insert end $char
+        }
+        # if char is a : then get the index of the current entry
+        # and update $w to point to the next entry
+        if {$char == ":"} {
+            set n [string index $w end]
+            if { $n >= 7 } { return }
+            set w [string trimright $w "01234567"][expr {$n + 1}]
+            $w delete 0 end
+            continue
+        }
+    }
+    ::ipentry::updateTextvar $w
+}
+
 # dotclick --
 #
 # called when mouse button 1 is clicked on any of the label widgets
+# used by both ipentry and ipentry6
 #
 # decide which side of the dot was clicked and put the focus and cursor
 # in the correct entry
@@ -296,6 +417,7 @@ proc ::ipentry::dotclick {w x} {
 # arrow --
 #
 # called when the left or right arrow keys are pressed in an ipentry
+# used by both ipentry and ipentry6
 #
 # ARGS:
 #       w       window argument (%W) from the event binding
@@ -321,6 +443,7 @@ proc ::ipentry::arrow {w key} {
 # validate --
 #
 # called by keypress to validate the input
+# used by ipentry only
 #
 # ARGS:
 #       w       window argument (%W) from the event binding
@@ -355,9 +478,42 @@ proc ::ipentry::validate {w key} {
     return 1
 }
 
+# validate6 --
+#
+# called by keypress to validate the input
+# used by ipentry6 only
+#
+# ARGS:
+#       w       window argument (%W) from the event binding
+#       key     the key pressed
+#
+# RETURNS:
+#       a boolean indicating if the key is valid or not
+#
+proc ::ipentry::validate6 {w key} {
+    if {![string is xdigit $key]} { return 0 }
+    set curval 0x[$w get]
+    set insert [$w index insert]
+    # dont allow more than a single 0 to be entered
+    if {$curval == "0" && $key == "0"} { return 0 }
+    if {[string length $curval] == 5} {
+        set curval [join [linsert [split $curval {}] $insert $key] {}]
+        if {$insert == 3} {
+            skip $w next 1
+        }
+        return 1
+    }
+    if {[string length $curval] >= 6 && ![$w selection present]} {
+        if {$insert == 4} { skip $w next 1 }
+        return 0
+    }
+    return 1
+}
+
 # skip --
 #
 # move the cursor to the previous or next entry widget
+# used by both ipentry and ipentry6
 #
 # ARGS:
 #       w       name of the current entry widget 
@@ -370,8 +526,8 @@ proc ::ipentry::validate {w key} {
 proc ::ipentry::skip {w dir {sel 0}} {
     set n [string index $w end]
     if {$dir == "next"} {
-        if { $n >= 3 } { return $w }
-        set next [string trimright $w "0123"][expr {$n + 1}]
+        set next [string trimright $w "012345678"][expr {$n + 1}]
+        if { ![winfo exists $next] } { return $w }
         focus $next
         if {$sel} {
             $next icursor 0
@@ -380,7 +536,7 @@ proc ::ipentry::skip {w dir {sel 0}} {
         return $next
     } else {
         if { $n <= 0 } { return $w }
-        set prev [string trimright $w "0123"][expr {$n - 1}]
+        set prev [string trimright $w "012345678"][expr {$n - 1}]
         focus $prev
         $prev icursor end
         return $prev
@@ -389,24 +545,37 @@ proc ::ipentry::skip {w dir {sel 0}} {
 
 # _foreach --
 #
+# utility for the widget configure command
+#
 # perform a command on every subwidget of an ipentry frame
 #
 # ARGS:
 #       w       name of the ipentry frame 
 #       cmd     command to perform
+#       type    one of empty, "entry", or "dot"
 #
 # RETURNS:
 #       nothing
 #
-proc ::ipentry::_foreach {w cmd} {
-    foreach x {0 d1 1 d2 2 d3 3} {
-        eval [list $w.$x] $cmd
+proc ::ipentry::_foreach {w cmd {type {}}} {
+    if {$type == "" || $type == "entry"} {
+        foreach x {0 1 2 3 4 5 6 7} {
+            if {![winfo exists $w.$x]} { break }
+            eval [list $w.$x] $cmd
+        }
     }
+    if {$type == "" || $type == "dot"} {
+        foreach x {d1 d2 d3 d4 d5 d6 d7} {
+            if {![winfo exists $w.$x]} { break }
+            eval [list $w.$x] $cmd
+        }
+     }
 }
 
 # cget --
 #
 # handle the widgetName cget subcommand
+# used by both ipentry and ipentry6
 #
 # ARGS:
 #       w       name of the ipentry widget 
@@ -443,6 +612,7 @@ proc ::ipentry::cget {w cmd} {
 # configure --
 #
 # handle the widgetName configure subcommand
+# used by both ipentry and ipentry6
 #
 # ARGS:
 #       w       name of the ipentry widget 
@@ -462,7 +632,7 @@ proc ::ipentry::configure {w args} {
                     if {[set dbg [$w.0 cget -disabledbackground]] == ""} {
                           set dbg [$w.0 cget -bg]
                     }
-                    foreach x {d1 d2 d3} { $w.$x configure -bg $dbg }
+                    _foreach $w [list configure -bg $dbg] dot
                     if {$Priv(themed)} {
                         ::ipentry::_$w state disabled
                     } else {
@@ -470,18 +640,18 @@ proc ::ipentry::configure {w args} {
                     }
                 } elseif {$state == "normal"} {
                     _foreach $w [list configure -state normal]
-                    foreach x {d1 d2 d3} { $w.$x configure -bg [$w.0 cget -bg] }
+                    _foreach $w [list configure -bg [$w.0 cget -bg]] dot
                     if {$Priv(themed)} {
                         ::ipentry::_$w state {!readonly !disabled}
                     } else {
                          ::ipentry::_$w configure -background [$w.0 cget -bg]
                     }
                 } elseif {$state == "readonly"} {
-                    foreach x {0 1 2 3} { $w.$x configure -state readonly }
+                    _foreach $w [list configure -state readonly] entry
                     if {[set robg [$w.0 cget -readonlybackground]] == ""} {
                         set robg [$w.0 cget -bg]
                     }
-                    foreach x {d1 d2 d3} { $w.$x configure -bg $robg }
+                    _foreach $w [list configure -bg $robg] dot
                     if {$Priv(themed)} {
                         ::ipentry::_$w state !readonly
                     } else {
@@ -493,7 +663,6 @@ proc ::ipentry::configure {w args} {
             -bg - -background {
                 set bg [lindex $args 1]
                 _foreach $w [list configure -background $bg]
-                foreach x {d1 d2 d3} { $w.$x configure -background $bg }
                 if {!$Priv(themed)} {
                     ::ipentry::_$w configure -background $bg
                 }
@@ -522,7 +691,7 @@ proc ::ipentry::configure {w args} {
             -selectbackground   -
             -selectborderwidth  -
             -insertbackground {
-                foreach x {0 1 2 3} { $w.$x configure $cmd [lindex $args 1] }
+                _foreach $w [list configure $cmd [lindex $args 1]] entry
                 set args [lrange $args 2 end]
             }
             -themed {
@@ -533,14 +702,17 @@ proc ::ipentry::configure {w args} {
                 upvar #0 $name var
                 #if {![string match ::* $name]} { set name ::$name }
                 if {[info exists ::ipentry::textvars($w)]} {
-                    trace remove variable $::ipentry::textvars($w) \
-                        {write unset} [list ::ipentry::traceFired $w]
+                    set trace [trace info variable var]
+                    trace remove variable var [lindex $trace 0 0] [lindex $trace 0 1]
                 }
                 set ::ipentry::textvars($w) $name
                 if {![info exists var]} { set var "" }
                 ::ipentry::traceFired $w $name {} write
-                trace add variable var {write unset} \
-                    [list ::ipentry::traceFired $w]
+                if {[winfo exists $w.4]} {
+                    trace add variable var {write unset} [list ::ipentry::traceFired6 $w]
+                } else {
+                    trace add variable var {write unset} [list ::ipentry::traceFired $w]
+                }
                 set args [lrange $args 2 end]
             }
             default {
@@ -553,6 +725,7 @@ proc ::ipentry::configure {w args} {
 # destroyWidget --
 #
 # bound to the <Destroy> event
+# used by both ipentry and ipentry6
 #
 # ARGS:
 #       w       name of the ipentry widget 
@@ -564,8 +737,8 @@ proc ::ipentry::destroyWidget {w} {
     upvar #0 [namespace current]::widget_$w state
     if {[info exists ::ipentry::textvars($w)]} {
         upvar #0 $::ipentry::textvars($w) var
-        trace remove variable var {write unset} \
-            [list ::ipentry::traceFired $w]
+        set trace [trace info variable var]
+        trace remove variable var [lindex $trace 0 0] [lindex $trace 0 1]
     }
     rename $w {}
     unset state
@@ -574,6 +747,7 @@ proc ::ipentry::destroyWidget {w} {
 # traceFired --
 #
 # called by the variable trace on the ipentry textvariable
+# used by ipentry only
 #
 # ARGS:
 #       w       name of the ipentry widget 
@@ -604,9 +778,44 @@ proc ::ipentry::traceFired {w name key op} {
     }
 }
 
+# traceFired6 --
+#
+# called by the variable trace on the ipentry textvariable
+# used by ipentry6 only
+#
+# ARGS:
+#       w       name of the ipentry widget 
+#       varname name of the variable being traced
+#       key     array index of the variable
+#       op      operation performed on the variable, read/write/unset
+#
+# RETURNS:
+#       nothing
+#
+proc ::ipentry::traceFired6 {w name key op} {
+    upvar #0 $name var
+    if {[info level] > 1} {
+        set caller [lindex [info level -1] 0]
+        if {$caller == "::ipentry::updateTextvar" || $caller == "::ipentry::traceFired6"} { return }
+    }
+    if {$op == "write"} {
+        _insert6 $w [split $var :]
+        set val [string trim [join [$w get] :] :]
+        # allow a dot at the end, but only if we have less than 3 already
+        if {[string index $var end] == ":" && [regexp -all {\:+} $var] <= 7} { append val : }
+        if {$val eq $var} return
+        after 0 [list set $name $val]
+        set var $val
+    } elseif {$op == "unset"} {
+        ::ipentry::updateTextvar $w
+        trace add variable $::ipentry::textvars($w) {write unset} [list ipentry::traceFired6 $w]
+    }
+}
+
 # updateTextvar --
 #
 # called by all procs which change the value of the ipentry
+# used by both ipentry and ipentry6
 #
 # update the textvariable if it exists with the new value
 #
@@ -619,7 +828,8 @@ proc ::ipentry::traceFired {w name key op} {
 proc ::ipentry::updateTextvar {w} {
     set p [winfo parent $w]
     if {![info exists ::ipentry::textvars($p)]} { return }
-    set val [string trim [join [$p get] .] .]
+    set c [$p.d1 cget -text]
+    set val [string trim [join [$p get] $c] $c]
     global $::ipentry::textvars($p)
     if {[set $::ipentry::textvars($p)] == $val} { return }
     set $::ipentry::textvars($p) $val
@@ -628,6 +838,7 @@ proc ::ipentry::updateTextvar {w} {
 # _insert --
 #
 # called by the variable trace on the ipentry textvariable and widget insert cmd
+# used by ipentry only
 #
 # ARGS:
 #       w       name of an ipentry widget 
@@ -641,11 +852,40 @@ proc ::ipentry::_insert {w val} {
         set n [lindex $val $x]
         if {$n != ""} {
             if {![string is integer -strict $n]} {
-                error "cannot insert non-numeric arguments"
+                #error "cannot insert non-numeric arguments"
+                return
             }
             if {$n > 255} { set n 255 }
             if {$n <= 0}  { set n 0 }
-            #if {$x == 0 && $n < 1} { set n 1 }
+            if {$x == 0 && $n < 1} { set n 1 }
+        }
+        $w.$x delete 0 end
+        $w.$x insert 0 $n
+    }
+}
+
+# _insert6 --
+#
+# called by the variable trace on the ipentry textvariable and widget insert cmd
+# used by both ipentry6 only
+#
+# ARGS:
+#       w       name of an ipentry widget 
+#       val     a list of 8 values to be inserted into the ipentry
+#
+# RETURNS:
+#       nothing
+#
+proc ::ipentry::_insert6 {w val} {
+    foreach x {0 1 2 3 4 5 6 7} {
+        set n [lindex $val $x]
+        if {![string is xdigit $n]} {
+              #error "cannot insert non-hex arguments"
+              return
+        }
+        if {$n != "" } {
+            if "$x == 0 && 0x$n < 1" { set n 1 }
+            if "0x$n > 0xffff" { set n ffff }
         }
         $w.$x delete 0 end
         $w.$x insert 0 $n
@@ -655,6 +895,7 @@ proc ::ipentry::_insert {w val} {
 # widgetCommand --
 #
 # handle the widgetName command
+# used by ipentry, with some commands passed through from widgetCommand6
 #
 # ARGS:
 #       w       name of the ipentry widget 
@@ -669,9 +910,14 @@ proc ::ipentry::widgetCommand {w cmd args} {
     switch -exact -- $cmd {
         get {
             # return the 4 entry values as a list
-            foreach x {0 1 2 3} {
+            foreach x {0 1 2 3 4 5 6 7} {
+                if {![winfo exists $w.$x]} { break }
                 set s [$w.$x get]
-                if {[string length $s] > 1} { set s [string trimleft $s 0] }
+                if {[string length $s] > 1} {
+                    set s [string trimleft $s 0]
+                    if {$s == ""} { set s 0 }
+                }
+                
                 lappend r $s
             }
             return $r
@@ -681,7 +927,7 @@ proc ::ipentry::widgetCommand {w cmd args} {
             ::ipentry::updateTextvar $w.3
         }
         icursor {
-            if {![string match $w.* [focus]]} {return}
+            if {![string match $w.* [focus]]} { return }
             set i [lindex $args 0]
             if {![string is integer -strict $i]} { error "argument must be an integer" }
             set s [expr {$i / 4}]
@@ -689,7 +935,8 @@ proc ::ipentry::widgetCommand {w cmd args} {
             $w.$s icursor [expr {$i % 4}]
         }
         complete {
-            foreach x {0 1 2 3} {
+            foreach x {0 1 2 3 4 5 6 7} {
+                if {![winfo exists $w.$x]} { break }
                 if {[$w.$x get] == ""} { return 0 }
             }
             return 1
@@ -702,6 +949,40 @@ proc ::ipentry::widgetCommand {w cmd args} {
         }
         default {
             error "bad option \"$cmd\": must be get, insert, complete, cget, or configure"
+        }
+    }
+}
+
+# widgetCommand6 --
+#
+# handle the widgetName command for ipentry6 widgets
+# most subcommands are passed through to widgetCommand by the default case
+#
+# ARGS:
+#       w       name of the ipentry widget 
+#       cmd     the subcommand
+#       args    arguments to the subcommand
+#
+# RETURNS:
+#       the results of the invoked subcommand
+#
+proc ::ipentry::widgetCommand6 {w cmd args} {
+    upvar #0 [namespace current]::widget_$w state
+    switch -exact -- $cmd {
+        insert {
+            _insert6 $w [join $args]
+            ::ipentry::updateTextvar $w.7
+        }
+        icursor {
+            if {![string match $w.* [focus]]} { return }
+            set i [lindex $args 0]
+            if {![string is integer -strict $i]} { error "argument must be am integer" }
+            set s [expr {$i / 8}]
+            focus $w.$s
+            $w.$s icursor [expr {$i % 8}]
+        }
+        default {
+            return [eval [list ::ipentry::widgetCommand $w $cmd] $args]
         }
     }
 }
